# django-docker

./: .gitignore  README.md  docker-compose.macbook.yml  docker-compose.prod.yml  docker-compose.yml
flask-larynx/: Dockerfile  Dockerfile.prod  (+2 more)
saufhaengerle/: Dockerfile  Dockerfile.prod  README.md  entrypoint.sh  manage.py  pyproject.toml
saufhaengerle/actions/: models.py  signals.py  urls.py  views.py
saufhaengerle/actions/migrations/: 0001_initial.py
saufhaengerle/fingerprints/: admin.py  models.py  urls.py  views.py
saufhaengerle/fingerprints/components/: enroll.py
saufhaengerle/fingerprints/integrations/: mqtt.py
saufhaengerle/fingerprints/migrations/: 0001_initial.py  0002_initial.py  0003_fingerprint_template_id.py  0004_alter_fingerprint_finger_type.py
saufhaengerle/fingerprints/templates/: enroll_index.html
saufhaengerle/fingerprints/templates/unicorn/: enroll.html
saufhaengerle/mqtt/: admin.py  apps.py  helpers.py  models.py  signals.py  tests.py  urls.py  views.py
saufhaengerle/mqtt/integrations/: mqtt_client.py
saufhaengerle/mqtt/migrations/: 0001_initial.py  0002_alter_topic_name.py
saufhaengerle/saufhaengerle/: asgi.py  env_example  settings.py  urls.py  wsgi.py
saufhaengerle/saufhaengerle/templates/: index.html
saufhaengerle/scale/: admin.py  models.py  urls.py  views.py
saufhaengerle/scale/migrations/: 0001_initial.py  0002_scale_product.py
saufhaengerle/taps/: admin.py  models.py
saufhaengerle/taps/migrations/: 0001_initial.py  0002_tap_scale.py  0003_tap_product_name.py
saufhaengerle/users/migrations/: 0001_initial.py
(+5 files in other folders)
